# internal/controllers/patient/dto.go
@@ -1,0 +1,7 @@
+// patient/dto.go
+package patient
+
+type PatientInput struct {
+	First_Name string `json:"first_name" binding:"required"`
+	Email      string `json:"email" binding:"required,email"`
+}
